# logo

./: .devcontainer.json  .gitignore  .npmrc  AGENTS.md  Makefile  README.md  TODO.md  brand.json  brick_blockify.py  colors.csv  colors.py  compose_logo.py  devenv.local.nix.example  devenv.nix  elm-pages.config.mjs  elm-pages.nix  elm.json  export_raster.py  generate_brand_json.py  generate_designs.py  index.html  logo.cabal  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  style.css
.github/workflows/: deploy.yml  static.yml
app/: BrandGen.hs  Compose.hs  Draft.hs  Main.hs  Shared.elm  Site.elm
app/Route/: Index.elm  Kayttoohje.elm  Komponentit.elm  Responsiivisuus.elm  Saavutettavuus.elm  Typografia.elm  Varit.elm
content/: accessibility.toml  colors.toml  components.toml  effects.toml  meta.toml  motion.toml  opacity.toml  spacing.toml  typography.toml
layout/: first.blay  fourth.blay  head-basic.blay  head-blink.blay  head-laugh.blay  head-smile.blay  horizontal-bw.blay  horizontal-rainbow-rot1.blay  horizontal-rainbow-rot2.blay  horizontal-rainbow-rot3.blay  horizontal-rainbow-rot4.blay  horizontal-rainbow-rot5.blay  horizontal-rainbow-rot6.blay  horizontal-rainbow.blay  horizontal-rot1.blay  horizontal-rot2.blay  horizontal-rot3.blay  horizontal.blay  minifig-colorful.blay  minifig-rainbow.blay  second.blay  skins.conf  square-bw-basic.blay  square-bw-blink.blay  square-bw-laugh.blay  square-bw-smile.blay  square-dark-nougat.blay  square-light-nougat.blay  square-nougat.blay  square.blay  third.blay
review/: elm.json
review/src/: ReviewConfig.elm
review/src/LlmAgent/: NoExposingEverything.elm  NoTailwindRawStrings.elm  RequireModuleDoc.elm  RequireTypeAnnotation.elm
scripts/: text_to_path.py
src/Brand/: Logos.elm
src/Component/: Alert.elm  Badge.elm  Button.elm  ButtonGroup.elm  Card.elm  CloseButton.elm  Collapse.elm  ColorSwatch.elm  Dialog.elm  DownloadButton.elm  Dropdown.elm  ListGroup.elm  LogoCard.elm  MobileDrawer.elm  Pagination.elm  Pricing.elm  SectionHeader.elm  Stats.elm  Tabs.elm  Tag.elm  Timeline.elm  Toast.elm  Toggle.elm  Tooltip.elm
src/Guide/: Colors.elm  Colors.hs  CssGen.hs  DesignData.hs  ElmGen.hs  Json.hs  JsonLd.hs  Logos.elm  Tokens.elm
src/Logo/: Blockify.hs  BrickLayout.hs  Compose.hs  Config.hs  Favicons.hs  Raster.hs
tests/: TestSuite.hs
tests/Guide/: ColorsSpec.hs  ElmGenSpec.hs  JsonSpec.hs
