cabal-version: 2.2
name:          logo-gen
version:       0.1.0.0
license:       BSD-3-Clause
build-type:    Simple

library
  exposed-modules:
    Guide.Colors, Guide.DesignData, Guide.Json, Guide.JsonLd, Guide.ElmGen,
    Logo.BrickLayout, Logo.Blockify, Logo.Compose,
    Logo.Animate, Logo.Raster, Logo.Favicons
  hs-source-dirs: src
  ghc-options: -Wall
  default-language: GHC2021
  build-depends:
    base >=4.7 && <5, text, bytestring, base64-bytestring,
    directory, filepath, process, xml-conduit,
    aeson, aeson-pretty, JuicyPixels, containers, vector

-- Render a single .blay file to SVG / PNG / WebP + optional subtitle composition.
-- Generic: no filenames or brand colours are hardcoded.
executable blay-render
  main-is: Main.hs
  hs-source-dirs: app
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language: GHC2021
  build-depends:
    base >=4.7 && <5, logo-gen, text, directory, filepath

-- Draft a new .blay file from a source SVG (rasterise → blockify).
-- Local developer tool only; not used in CI.
executable blay-draft
  main-is: Draft.hs
  hs-source-dirs: app
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language: GHC2021
  build-depends:
    base >=4.7 && <5, logo-gen

-- Transform .blay files: recolour and/or tile side-by-side.
-- No filenames, colours, or project specifics are hardcoded.
executable blay-compose
  main-is: Compose.hs
  hs-source-dirs: app
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language: GHC2021
  build-depends:
    base >=4.7 && <5, logo-gen, text

-- Assemble pre-rendered PNG frames into animated GIF / WebP.
executable blay-animate
  main-is: Animate.hs
  hs-source-dirs: app
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language: GHC2021
  build-depends:
    base >=4.7 && <5, logo-gen

-- Generate design-guide JSON, JSON-LD, and Elm brand tokens.
executable brand-gen
  main-is: BrandGen.hs
  hs-source-dirs: app
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language: GHC2021
  build-depends:
    base >=4.7 && <5, logo-gen, text, directory, filepath

test-suite logo-gen-tests
  type: exitcode-stdio-1.0
  main-is: TestSuite.hs
  other-modules:
    Guide.ColorsSpec, Guide.ElmGenSpec, Guide.JsonSpec,
    Logo.BlockifySpec
  hs-source-dirs: tests
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language: GHC2021
  build-depends:
    base >=4.7 && <5, text, bytestring, aeson, logo-gen,
    tasty, tasty-hunit, tasty-quickcheck,
    temporary, process
